--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiocron==0.5
 aiohttp==0.21.2
 beautifulsoup4==4.4.1
 chardet==2.3.0
+colorlog==2.10.0
 croniter==0.3.12
 lxml==3.5.0
 python-dateutil==2.5.3
